# xm-audio-utils

./: .gitignore  README.md  cross_build.sh  package.sh  release-ios.sh
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/audio_utils-java/: build.gradle
android/lib-audio-utils/: Android.mk  build.gradle  xm_audio_generator_jni.c  xm_audio_utils_jni.c
android/lib-audio-utils/src/main/: AndroidManifest.xml
android/lib-audio-utils/src/main/jni/: Android.mk  Application.mk  xm_audio_utils_jni.c
ffmpeg-3.4.7/: build_js.sh  config.asm  config.h  module-lite.sh
ffmpeg-3.4.7/dist-wasm/: ffmpeg-core.js  ffmpeg-core.wasm
ffmpeg-3.4.7/doc/: config.texi
ffmpeg-3.4.7/doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc
ffmpeg-3.4.7/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-3.4.7/libavcodec/: bsf_list.c  libavcodec.pc
ffmpeg-3.4.7/libavfilter/: libavfilter.pc
ffmpeg-3.4.7/libavformat/: libavformat.pc  protocol_list.c
ffmpeg-3.4.7/libavutil/: libavutil.pc
ffmpeg-3.4.7/libswresample/: libswresample.pc
lame-3.100/: build_js.sh
lib-audio-utils/: CMakeLists.txt  build_js.sh  run_test.sh  run_valgrind_test.sh
lib-audio-utils/data/: audio_effects_1.pcm  audio_effects_2.pcm  bgm2.pcm  effect_config.txt  module.sh  web_effect_config.txt
lib-audio-utils/include/: em_macro_def.h  error_def.h  log.h  xm_audio_generator.h  xm_audio_transcode.h  xm_audio_utils.h  xm_duration_parser.h  xm_wav_utils.h
lib-audio-utils/src/: audio_decoder_factory.c  audio_decoder_factory.h  audio_source.c  audio_source.h  audio_source_queue.c  audio_source_queue.h  idecoder.c  idecoder.h  js_callback.h  pcm_decoder.c  pcm_decoder.h  pcm_parser.c  pcm_parser.h  voice_mixer_struct.h  wav_dec.c  wav_dec.h  xm_audio_effects.c  xm_audio_effects.h  xm_audio_generator.c  xm_audio_mixer.c  xm_audio_mixer.h  xm_audio_transcode.c  xm_audio_utils.c  xm_duration_parser.c  xm_wav_utils.c
lib-audio-utils/src/codec/: audio_decoder.c  audio_decoder.h  audio_decoder_factory.c  audio_decoder_factory.h  audio_encoder.c  audio_encoder.h  audio_muxer.c  audio_muxer.h  duration_parser.c  duration_parser.h  ffmpeg_decoder.c  ffmpeg_decoder.h  ffmpeg_utils.c  ffmpeg_utils.h  idecoder.c  idecoder.h  muxer_config.h  pcm_decoder.c  pcm_decoder.h
lib-audio-utils/src/codec/hw/: audio_encoder_ios_hw.h  audio_encoder_ios_hw.m  mybufferqueue.h
lib-audio-utils/src/codec/hw/ijksdl/: ijksdl_thread.c  ijksdl_thread_ios.m  ijksdl_thread_macos.c
lib-audio-utils/src/codec/mediacodec/: audio_encoder_mediacodec.c
lib-audio-utils/src/codec/sw/: audio_encoder_sw.c  audio_encoder_sw.h
lib-audio-utils/src/effects/: beautify.c  echo.c  echos.c  effect_struct.h  effects.h  limiter.c  minions.c  morph_filter.c  noise_suppression.c  reverb.c  voice_effect.c  voice_effect.h  volume_limiter.c  xm_audio_effects.c  xm_audio_effects.h  xm_total_effects.c  xm_total_effects.h
lib-audio-utils/src/effects/beautify/: compressor.c  equalizer.c  flanger.c  limiter.c  limiter.h  multiband_compressor.c
lib-audio-utils/src/effects/math/: junior_func.h
lib-audio-utils/src/effects/morph_filter/pitch_tracker/src/: pitch_core.c  pitch_core.h  pitch_tracker.c  pitch_tracker.h
lib-audio-utils/src/effects/morph_filter/voice_morph/morph/: morph_core.c  voice_morph.c  voice_morph.h
lib-audio-utils/src/effects/noise_suppression/: defines.h  noise_estimation.c  noise_estimation.h  noise_suppression.c  noise_suppression.h  tables.h
lib-audio-utils/src/effects/noise_suppression/ns/: ns_core.c  ns_core.h
lib-audio-utils/src/effects/sox/: effects_i.c  sox.h
lib-audio-utils/src/effects/sox/biquad/: band.h  biquad.c  biquad.h  biquads.c
lib-audio-utils/src/effects/sox/compand/: compand.c  compandt.c  compandt.h
lib-audio-utils/src/effects/sox/mcompand/: mcompand.c  mcompand_xover.h
lib-audio-utils/src/effects/sox/reverb/: reverb.c
lib-audio-utils/src/json/: json_parse.c  json_parse.h  web_json_parser.c  web_json_parser.h
lib-audio-utils/src/mixer/: fade_in_out.c  fade_in_out.h  mixer_effects.h  side_chain_compress.c  side_chain_compress.h  xm_audio_mixer.c  xm_audio_mixer.h
lib-audio-utils/src/mixer_effects/: audio_source.h  audio_source_queue.c  audio_source_queue.h  fade_in_out.c  fade_in_out.h  side_chain_compress.c
lib-audio-utils/src/source/: audio_record_source.c  audio_record_source.h  audio_record_source_queue.c  audio_record_source_queue.h  audio_source.c  audio_source.h  audio_source_queue.c  audio_source_queue.h  source_queue.h
lib-audio-utils/src/tools/: avstring.c  dict.c  dict.h  fifo.c  fifo.h  log.c  mem.c  util.c  util.h
lib-audio-utils/src/wave/: wav_dec.c
lib-audio-utils/tests/: CMakeLists.txt  file_helper.h  test_audio_decoder.c  test_audio_encoder.c  test_beautify.c  test_compand.c  test_effects.c  test_fifo.c  test_logger.c  test_mcompand.c  test_noise_suppression.c  test_reverb.c  test_volume_limiter.c  test_wav_concat.c  test_wav_crop.c  test_wav_dec.c  test_xm_audio_effects.c  test_xm_audio_generator.c  test_xm_audio_generator_effect.c  test_xm_audio_generator_mix.c  test_xm_audio_mixer.c  test_xm_audio_utils.c  test_xm_audio_utils_decode.c  test_xm_audio_utils_effects.c  test_xm_audio_utils_fade.c  test_xm_audio_utils_mix.c  test_xm_audio_utils_resampler.c
prebuilt/android/ffmpeg-arm64/include/: config.h
prebuilt/android/ffmpeg-arm64/include/libffmpeg/: config.h
prebuilt/android/ffmpeg-armv5/include/: config.h
prebuilt/android/ffmpeg-armv5/include/libffmpeg/: config.h
prebuilt/android/ffmpeg-armv7a/include/: config.h
prebuilt/android/ffmpeg-armv7a/include/libffmpeg/: config.h
prebuilt/android/ffmpeg-x86/include/libffmpeg/: config.h
prebuilt/android/ffmpeg-x86_64/include/: config.h
prebuilt/android/ffmpeg-x86_64/include/libffmpeg/: config.h
prebuilt/ios/include/libavcodec/: avcodec.h
prebuilt/ios/include/libavformat/: avformat.h
prebuilt/ios/include/libavutil/: avconfig.h  avutil.h
toolchains/: ios.toolchain.cmake
(+17 files in other folders)
